--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "babel-jest": "^24.8.0"
+    "babel-jest": "^24.8.0",
+    "node-fetch": "^2.6.0"
   }
 }
