feat: version 2 using VueJS and JSX

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "customskills",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "description": "Create new skills on Habitica by changing custom values",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "babel src/customSkill.js --out-file build/customSkills.user.js"
   },
   "author": "Mark",
   "license": "ISC",
@@ -13,8 +14,11 @@
     "jest-fetch-mock": "^2.1.2"
   },
   "dependencies": {
+    "@babel/cli": "^7.7.0",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
+    "@vue/babel-preset-jsx": "^1.1.2",
     "babel-jest": "^24.8.0",
     "node-fetch": "^2.6.0"
   },
