--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "2.0.0",
   "description": "Create new skills on Habitica by changing custom values",
   "scripts": {
-    "test": "jest"
+    "test": "jest --watch"
   },
   "author": "Marcelo 'Mark' Kopmann",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^24.8.0",
-    "jest-fetch-mock": "^2.1.2"
+    "jest": "^24.8.0"
   },
   "dependencies": {
   }
