--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: node_js
 node_js:
   - 7
-env:
-  - CODECOV_TOKEN="e377f5a1-42d3-493f-94ae-79781f3e1cef"
 install:
-  - npm install -g codecov
+  - npm install
 scripts:
-  - npm run jest && codecov
+  - jest && codecov
