--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-    "name": "habiticacustomskills",
-    "version": "3.0.0",
-    "description": "Create new skills on Habitica by changing custom values",
+    "name": "habiticascripts",
+    "version": "1.0.0",
+    "description": "A script suite with customizations for Habitica's website",
     "scripts": {
         "test": "jest",
         "watch": "jest --watch",
-        "build": "rollup -c",
-        "test:ci": "jest && codecov"
+        "build": "node ./build.js"
     },
     "author": "Marcelo 'Mark' Kopmann",
     "license": "ISC",
@@ -19,7 +18,8 @@
         "rollup": "^1.29.0",
         "rollup-plugin-banner": "git+https://github.com/Markkop/rollup-plugin-banner.git",
         "rollup-plugin-shift-header": "^1.0.1",
-        "codecov": "^3.6.1"
+        "codecov": "^3.6.1",
+        "inquirer": "^7.0.3"
     },
     "dependencies": {},
     "jest": {
